--- a/imposter.html
+++ b/imposter.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="enn">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=5.0">
     <title>Document</title>
 </head>
 <body>
     
 </body>
 </html>
-</abbr>
+<!DOCTYPE html>
